--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,6 +1,6 @@
 /* Header.css */
 
-.header {
+.header-job  {
   background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 15px 0;
@@ -48,6 +48,7 @@
   padding: 10px 0px;
   text-decoration: none;
   color: #333333;
+  font-size: 18px;
   text-transform: uppercase;
   position: relative;
 }
@@ -77,6 +78,7 @@
   padding: 10px 10px;
   text-decoration: none;
   color: #333333;
+  font-size: 18px;
   text-transform: uppercase;
   position: relative;
 }
@@ -97,7 +99,7 @@
 }
 .header-dropdown {
   position: relative;
-  margin-left: 20px;
+  //margin-left: 20px;
 }
 
 .header-dropbtn {
@@ -105,6 +107,7 @@
   padding: 10px 10px;
   text-decoration: none;
   color: #333333;
+  font-size: 18px;
   text-transform: uppercase;
   position: relative;
 }
@@ -131,28 +134,42 @@
   display: none;
   position: absolute;
   background-color: #ffffff;
+  font-size: 16px;
   min-width: 120px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
+
 .header-dropdown-button {
   display: flex;
+  font-size: 18px;
   align-items: center;
   gap: 5px;
 }
+.chevron-icon {
+  transition: transform 0.3s ease;
+}
+
+.rotate {
+  transform: rotate(180deg);
+}
 .header-dropdown-content a {
+  text-transform: uppercase;
   display: block;
   padding: 12px 16px;
   text-decoration: none;
+  font-size: 16px;
   color: #333333;
   transition: background-color 0.3s ease;
+  width: auto; 
+  white-space: nowrap; 
 }
 
 .header-dropdown-content a:hover {
   background-color: #f9f9f9;
 }
 
-.header-dropdown:hover .header-dropdown-content,
+.header-dropdown:hover .header-dropdown-content, 
 .show-dropdown-content {
   display: block;
 }
