--- a/src/pages/User/CreateCV/TemplateCV03/style.css
+++ b/src/pages/User/CreateCV/TemplateCV03/style.css
@@ -128,7 +128,7 @@
   margin-bottom: 10px;
   padding-bottom: 10px;
 }
-#CV03 .form-groupp.education textarea,
+#CV03 .form-groupp.educations textarea,
 .form-groupp.skills textarea {
   background-color: white;
 }
