Update form Login

--- a/src/pages/User/Login/index.css
+++ b/src/pages/User/Login/index.css
@@ -34,3 +34,6 @@ background: #eee;
 	background-color: blue !important;
 	font-weight: bold !important;
   }
+  .cus-or {
+  	margin-bottom: 25px;
+  }
