--- a/src/pages/User/CreateCV/ApplyCV/style.css
+++ b/src/pages/User/CreateCV/ApplyCV/style.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
 }
 
 .info-title {
@@ -17,6 +16,31 @@
   font-weight: bold;
   text-transform: uppercase;
   margin-left: 10px;
+}
+
+.info-status.new {
+  background-color: #a5a5b2;
+  color: white;
+}
+
+.info-status.reviewed {
+  background-color: #ffd831;
+  color: white;
+}
+
+.info-status.in_progress {
+  background-color: #ee9f3f;
+  color: white;
+}
+
+.info-status.hired {
+  background-color: #90b050;
+  color: white;
+}
+
+.info-status.rejected {
+  background-color: #f86e69;
+  color: white;
 }
 .info-count {
   margin-left: 15px;
@@ -45,28 +69,27 @@
   margin-left: 0.25rem;
 }
 
-.search-input input {
-  padding-right: 30px;
+.search-inputt {
+  position: relative;
+  display: inline-block;
+  align-items: center;
+  margin-left: 40px;
+  margin-top: 10px;
 }
 .custom-input.form-control {
   width: 350px;
   text-align: center;
 }
-.search-input {
-  align-items: center;
-  display: flex;
-  position: relative;
-  margin-left:10px;
-  margin-bottom:-10px;
+.search-input input {
+  padding-right: 30px;
 }
-.custom-input {
-  width: 350px;
-  text-align: center;
-  padding-left: 30px;
-}
+
 .search-icon {
   position: absolute;
-  left: 10px; 
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 .btn-group > .btn,
 .btn-group-vertical > .btn {
@@ -86,12 +109,13 @@
   margin-bottom: 20px;
   border-radius: 10px;
   background-color: #f7f7f7;
+  flex-grow: 1;
+  overflow-y: auto;
 }
 .cv-list .list-group-item {
   margin-bottom: 10px;
   border-radius: 10px;
 }
-
 .attached-cv {
   display: flex;
   align-items: center;
@@ -101,34 +125,7 @@
 .attached-cv span {
   font-weight: bold;
 }
-
-.no-file-icon {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.no-file-icon svg {
-  margin-bottom: 10px;
-}
-.cv {
-  display: flex;
-  justify-content: flex-end;
-  flex-grow: 1;
-}
-.cv > button {
-  margin-left: 5px;
-}
-
-.cv-buttons {
-  display: flex;
-  justify-content: flex-end;
-  flex-grow: 1;
-}
-.cv-buttons > button {
-  margin-left: 5px;
-}
-.no-cv {
+.no-job-applied {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -136,36 +133,22 @@
   flex-direction: column;
   color: #a5a5b2;
 }
-
-.no-cv-icon {
-  font-size: 48px;
-  margin-bottom: 10px;
-}
 .cv-description {
   height: 570px;
 }
-.btn.btn-danger {
-  color: white;
-}
-.btn.btn-warning {
-  color: white;
-}
-#upAndCreateButton {
-  padding: 5px 10px;
+.no-job-applied-icon {
+  font-size: 48px;
   margin-bottom: 10px;
-  background-color: green;
-  border-color: green;
-  margin-top: 20px;
-  border-radius: 20px;
-  width: auto;
-  color: white;
-  font-weight: bold;
 }
 #cardForm {
   height: calc(110vh - 170px);
   overflow-y: auto;
   margin-bottom: 30px;
 }
+.filter{
+  margin-left:10px;
+}
+
 body {
   overflow-x: hidden;
 }
