--- a/src/pages/Recruiter/Dashboard/style.css
+++ b/src/pages/Recruiter/Dashboard/style.css
@@ -142,7 +142,7 @@
     color: #a5a5b2;
   }
   .cv-description {
-    height: 570px;
+    height: 560px;
   }
   .no-job-applied-icon {
     font-size: 48px;
@@ -175,9 +175,16 @@
     padding: 5px 10px;
     cursor: pointer;
     border-radius:5px;
-
   }
-  
+  .application-button {
+    background-color: #e55353; 
+    color: white; 
+    font-weight:550;
+    border: 1px solid #000;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius:5px;
+  }
   .delete-button {
     background-color: white; 
     margin-left: 5px;
