--- a/src/pages/User/CreateCV/MyCV/style.css
+++ b/src/pages/User/CreateCV/MyCV/style.css
@@ -152,7 +152,7 @@
   margin-bottom: 10px;
 }
 .cv-description {
-  height: 570px;
+  height: 560px;
 }
 .btn.btn-danger {
   color: white;
@@ -180,4 +180,7 @@
 }
 body {
   overflow-x: hidden;
+}
+#cardFormCV {
+  height: calc(110vh - 170px);
 }
