--- a/src/pages/User/CreateCV/TemplateCV01/style.css
+++ b/src/pages/User/CreateCV/TemplateCV01/style.css
@@ -123,3 +123,17 @@
   height: 40px;
   font-size: 18px;
 }
+#CV01 .title-text{
+  position: absolute;
+}
+#CV01 .bio-text{
+  position: relative;
+  top: 20px;
+  left: -75px;
+  margin-bottom:30px;
+}
+#CV01 .cus-birthday {
+  border: none !important;
+  border-radius: 0;
+  margin-left:-10px;
+}
