--- a/src/pages/User/ListCompanies/style.css
+++ b/src/pages/User/ListCompanies/style.css
@@ -41,12 +41,29 @@
   height: 20px;
 }
 
-//Profile
+.no-results-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto; 
+}
+
+.no-results-image {
+  width: 100px;
+  height: auto;
+}
+
+.no-results-message {
+  margin-top: 20px;
+  font-size: 18px;
+  color: #555; 
+}
 
 .company-profile-image {
   margin-top: 10px;
   margin-left: 10px;
   margin-right: 10px;
   width: 200px; 
-  object-fit: contain; /* Hiển thị toàn bộ hình ảnh trong khung */
+  object-fit: contain; 
 }
