--- a/src/pages/User/FindJobs/style.css
+++ b/src/pages/User/FindJobs/style.css
@@ -47,7 +47,12 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
+.location-job{
+  max-width: 350px; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .cus-pre-next:disabled {
   background-color: #ccc;
   color: #888;
@@ -91,7 +96,6 @@
   position: sticky;
   top: 94px;
   height: 100%;
-  z-index: 1;
   max-height: 600px;
   overflow-y: auto;
 }
@@ -251,4 +255,19 @@
   background-color: #ffcccc; 
   color: #cc0000; 
   font-weight: bold;
+}
+.clear-button{
+  position:relative;
+}
+.clear-all-button{
+  position: absolute;
+  top: -10px;
+  right: 25px;
+  z-index:1;
+  background-color: #fff;
+  border: 1px solid #ccc; 
+  padding: 5px 10px; 
+}
+.clear-all-button:hover{
+  color:blue; 
 }
